# zcsv

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/zcsv/: __init__.py  compat.py
src/: fast_pyobjects.rs  lib.rs  parallel.rs  reader.rs  row.rs  schema.rs  sniffer.rs  types.rs  validator.rs  writer.rs
tests/: test_compat.py  test_read.py  test_sniffer.py  test_write.py
