[package]
name = "zcsv"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
simd-csv = "0.11"
csv = "1.3"            # kept for writer (WriterBuilder)
serde = { version = "1.0", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
chrono = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
