[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "zcsv"
version = "0.1.0"
description = "Blazing-fast drop-in replacement for Python's csv module, powered by Rust"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["csv", "fast", "rust", "parser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pandas>=2.0"]

[tool.maturin]
python-source = "python"
module-name = "zcsv._core"
features = ["pyo3/extension-module"]
